# wikisearch

./: .gitignore  CMakeLists.txt  README.md
B+tree/: B+Node.hpp  NodeTraits.hpp  Tree.hpp  TreeHelper.hpp  disk_manager.hpp  main.cpp
DataProcessing/: .gitignore  Makefile  README.md  ZimManager  ZimManager.cpp  ZimManager.h  btree.index  genIndexServer.cpp  htmlParser.cpp  htmlParser.h  jsonTrie.cpp  out.txt  processing.cpp  searchword.cpp  wordpage.index  zimFiltering.cpp  zimInterface.cpp
DataProcessing/examples/: b+tree_example.cpp  htmlParser_example.cpp  htmlParser_example.html  preprocessor_example.cpp  zimmanager_example.cpp
DataProcessing/include/: B+Node.hpp  Preprocessor.h  SearchEngineManager.h  Tree.hpp  TreeHelper.hpp  Trie.h  Trie.tpp  ZimManager.h  htmlParser.h
DataProcessing/src/: B+Node.cpp  Preprocessor.cpp  SearchEngineManager.cpp  ZimManager.cpp  htmlParser.cpp
TextPreprocessor/: Trie.cpp  preprocessor.cpp  text-example.txt
TextPreprocessor/lemmagen/src/: RdrLemmatizer.h
website/: .babelrc  Makefile  README.md  ads_server.py  btree.index  keyword.index  package-lock.json  package.json  server.cpp  test.html  wordpage.index
website/lib/: crow.h
website/public/: index.html
website/src/: Ads.jsx  App.css  App.jsx  Results.jsx  SearchBox.jsx  Test.jsx  html.js  trie.json
website/src/assets/: trie-es-50K.json
